force-app/main/default/objects/QuoteLineItem/fields/Areas_of_Coverage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Coverage_Summary__c</fullName>
    <formula>IF(ISBLANK(Areas_of_Coverage__c), NULL,
SUBSTITUTE(
IF(INCLUDES(Areas_of_Coverage__c, &quot;Garbage Room&quot;), &quot;Garbage Room; &quot;, NULL)  +  
IF(INCLUDES(Areas_of_Coverage__c, &quot;Storage&quot;), &quot;Storage; &quot;, NULL)  +  
IF(INCLUDES(Areas_of_Coverage__c, &quot;Kitchen&quot;), &quot;Kitchen; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Bar&quot;), &quot;Bar; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Electrical and Mechanical Room&quot;), &quot;Electrical and Mechanical Room; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Kitchenettes&quot;), &quot;Kitchenettes; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Offices&quot;), &quot;Offices; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Lunch Room&quot;), &quot;Lunch Room; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Manufacturing&quot;), &quot;Manufacturing; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Warehouse&quot;), &quot;Warehouse; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Shipping/Receiving&quot;), &quot;Shipping/Receiving; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Chute Rooms&quot;), &quot;Chute Rooms; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Other&quot;), Areas_of_Coverage_Other__c, NULL) + &quot;.&quot;, &quot;; .&quot;, NULL))</formula>
    <label>Areas of Coverage Summary</label>
    <type>Text</type>
</CustomField>