force-app/main/default/objects/QuoteLineItem/fields/Areas_of_Coverage_Summary_French__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Coverage_Summary_French__c</fullName>
    <formula>IF(ISBLANK(Areas_of_Coverage__c), NULL,
SUBSTITUTE(
IF(INCLUDES(Areas_of_Coverage__c, &quot;Garbage Room&quot;), &quot;Salle de déchets; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Storage&quot;), &quot;Entreposage; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Kitchen&quot;), &quot;Cuisine; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Bar&quot;), &quot;Bar; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Electrical and Mechanical Room French&quot;), &quot;Salle électrique et mécanique; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Kitchenettes&quot;), &quot;Cuisinettes; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Offices&quot;), &quot;Bureaux; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Lunch Room&quot;), &quot;Cafétéria; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Manufacturing&quot;), &quot;Fabrication; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Warehouse&quot;), &quot;Entrepôt; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Shipping/Receiving&quot;), &quot;Expédition/Réception; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Chute Rooms&quot;), &quot;Salles de chutes; &quot;, NULL) +
IF(INCLUDES(Areas_of_Coverage__c, &quot;Other&quot;), Areas_of_Coverage_Other__c, NULL) + &quot;.&quot;, &quot;; .&quot;, NULL))</formula>
    <label>Areas of Coverage Summary French</label>
    <type>Text</type>
</CustomField>