force-app/main/default/objects/QuoteLineItem/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <formula>PricebookEntry.Product2.Category_Description__c</formula>
    <label>Category Description</label>
    <type>Text</type>
</CustomField>