force-app/main/default/objects/QuoteLineItem/fields/Covered_Pests__c.field-meta.xml
<CustomField>
    <fullName>Covered_Pests__c</fullName>
    <label>Covered Pests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roaches</fullName>
            </value>
            <value>
                <fullName>Mice</fullName>
            </value>
            <value>
                <fullName>Rats</fullName>
            </value>
            <value>
                <fullName>Non Wood Boring Ants</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>