force-app/main/default/objects/QuoteLineItem/fields/Covered_Pests_Summary__c.field-meta.xml
<CustomField>
    <fullName>Covered_Pests_Summary__c</fullName>
    <formula>IF(ISBLANK(Covered_Pests__c), NULL,
SUBSTITUTE(
IF(INCLUDES(Covered_Pests__c, &quot;Roaches&quot;), &quot;Roaches; &quot;, NULL) +
IF(INCLUDES(Covered_Pests__c, &quot;Mice&quot;), &quot;Mice; &quot;, NULL) +
IF(INCLUDES(Covered_Pests__c, &quot;Rats&quot;), &quot;Rats; &quot;, NULL) +
IF(INCLUDES(Covered_Pests__c, &quot;Non Wood Boring Ants&quot;), &quot;Non Wood Boring Ants; &quot;, NULL) +
IF(INCLUDES(Covered_Pests__c, &quot;Other&quot;), Covered_Pests_Other__c, NULL) + &quot;.&quot;, &quot;; .&quot;, NULL))</formula>
    <label>Covered Pests Summary</label>
    <type>Text</type>
</CustomField>