force-app/main/default/objects/QuoteLineItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>MIN(
 1, 
  MAX(
    0,
    1 - (UnitPrice / IF( PricebookEntry.UnitPrice =0,1, PricebookEntry.UnitPrice ))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>