force-app/main/default/objects/QuoteLineItem/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>PricebookEntry.Product2.Product_Image__c</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>