force-app/main/default/objects/QuoteLineItem/fields/Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Installation_Price__c</fullName>
    <inlineHelpText>Indicates if an Installation Price is charged for Installing an item. Price entered is per unit. Filling in this field would result in a one time Installation Work Order.</inlineHelpText>
    <label>Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>