force-app/main/default/objects/QuoteLineItem/fields/IsChemicalEquipment__c.field-meta.xml
<CustomField>
    <fullName>IsChemicalEquipment__c</fullName>
    <formula>T_C_Code__c=&apos;4&apos; &amp;&amp;
Item_Type__c=&apos;Equipment&apos;</formula>
    <label>IsChemicalEquipment</label>
    <type>Checkbox</type>
</CustomField>