force-app/main/default/objects/QuoteLineItem/fields/isInstallation__c.field-meta.xml
<CustomField>
    <fullName>isInstallation__c</fullName>
    <formula>NOT( ISBLANK( Installation_Price__c ) )</formula>
    <label>isInstallation</label>
    <type>Checkbox</type>
</CustomField>