force-app/main/default/objects/QuoteLineItem/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Family )</formula>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>