force-app/main/default/objects/QuoteLineItem/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>