force-app/main/default/objects/QuoteLineItem/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <formula>Description</formula>
    <label>Notes</label>
    <type>Text</type>
</CustomField>