force-app/main/default/objects/QuoteLineItem/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <formula>CASESAFEID(OpportunityLineItem.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityLineItemId</label>
    <type>Text</type>
</CustomField>