force-app/main/default/objects/QuoteLineItem/fields/Prix_annuel__c.field-meta.xml
<CustomField>
    <fullName>Prix_annuel__c</fullName>
    <formula>Quantity *  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>