force-app/main/default/objects/QuoteLineItem/fields/Prix_Total__c.field-meta.xml
<CustomField>
    <fullName>Prix_Total__c</fullName>
    <formula>Quantity * Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix ​​Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>