force-app/main/default/objects/QuoteLineItem/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <formula>&apos;/servlet/servlet.FileDownload?file=&apos;+ Product2.Product_Image_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image URL</label>
    <type>Text</type>
</CustomField>