force-app/main/default/objects/QuoteLineItem/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <formula>TEXT( Product2.Unit__c )</formula>
    <label>Unit</label>
    <type>Text</type>
</CustomField>