force-app/main/default/objects/QuoteLineItem/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <formula>Product2.Name</formula>
    <label>Produit</label>
    <type>Text</type>
</CustomField>