force-app/main/default/objects/QuoteLineItem/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <formula>TEXT( Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantité</label>
    <type>Text</type>
</CustomField>