force-app/main/default/objects/QuoteLineItem/fields/Service_Frequency_mod__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency_mod__c</fullName>
    <formula>IF(
AND(
BEGINS(Product2.ProductCode, &quot;1&quot;),
ISPICKVAL(Service_Frequency__c, &quot;28 Days&quot;),
OR(
CONTAINS(Product2.Name, &quot;Arom&quot;),
CONTAINS(Product2.Name, &quot;EcoAire&quot;),
CONTAINS(Product2.Name, &quot;FreshAire&quot;),
CONTAINS(Product2.Name, &quot;EcoClean&quot;),
CONTAINS(Product2.Name, &quot;Anti-Splash&quot;),
CONTAINS(Product2.Name, &quot;AutoFlush Combo&quot;),
CONTAINS(Product2.Name, &quot;Urinal Mat&quot;),
CONTAINS(Product2.Name, &quot;Ultraire&quot;))),
&quot;(Strong)&quot;,

IF(
AND(
BEGINS(Product2.ProductCode, &quot;1&quot;),
ISPICKVAL(Service_Frequency__c, &quot;56 Days&quot;),
OR(
CONTAINS(Product2.Name, &quot;Arom&quot;),
CONTAINS(Product2.Name, &quot;EcoAire&quot;),
CONTAINS(Product2.Name, &quot;FreshAire&quot;),
CONTAINS(Product2.Name, &quot;EcoClean&quot;),
CONTAINS(Product2.Name, &quot;Anti-Splash&quot;),
CONTAINS(Product2.Name, &quot;AutoFlush Combo&quot;),
CONTAINS(Product2.Name, &quot;Urinal Mat&quot;))),
&quot;(Regular)&quot;,

IF(
AND(
BEGINS(Product2.ProductCode, &quot;1&quot;),
OR(
ISPICKVAL(Service_Frequency__c, &quot;120 Days&quot;),
ISPICKVAL(Service_Frequency__c, &quot;56 Days&quot;)),
CONTAINS(Product2.Name, &quot;Ultraire&quot;)),
&quot;(Regular)&quot;,

IF(
AND(
OR(
BEGINS(Product2.ProductCode, &quot;1-04-40&quot;),
BEGINS(Product2.ProductCode, &quot;1-04-41&quot;),
BEGINS(Product2.ProductCode, &quot;1-04-42&quot;)),
ISPICKVAL(Service_Frequency__c, &quot;182 Days&quot;)),
&quot;&quot;,

IF(
AND(
OR(
BEGINS(Product2.ProductCode, &quot;1-04-71&quot;),
BEGINS(Product2.ProductCode, &quot;1-04-72&quot;),
BEGINS(Product2.ProductCode, &quot;1-04-73&quot;),
BEGINS(Product2.ProductCode, &quot;1-08-01&quot;),
BEGINS(Product2.ProductCode, &quot;1-08-02&quot;),
BEGINS(Product2.ProductCode, &quot;1-08-03&quot;)),
ISPICKVAL(Service_Frequency__c, &quot;Annually&quot;)),
&quot;&quot;,

&quot;(&quot;&amp;TEXT(Service_Frequency__c)&amp;&quot;)&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Frequency	mod</label>
    <type>Text</type>
</CustomField>