force-app/main/default/objects/QuoteLineItem/fields/T_C_CCMP__c.field-meta.xml
<CustomField>
    <fullName>T_C_CCMP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if product has the T&amp;C CCMP Checked</description>
    <label>T&amp;C CCMP</label>
    <type>Checkbox</type>
</CustomField>