force-app/main/default/objects/QuoteLineItem/fields/T_C_Code__c.field-meta.xml
<CustomField>
    <fullName>T_C_Code__c</fullName>
    <formula>IF(
  BEGINS(Product2.ProductCode , &apos;999&apos;),
  &apos;0&apos;, 
  IF(
    AND(BEGINS(Product2.ProductCode , &apos;2-03&apos;),UnitPrice == 0 ),
    &apos;3&apos;,
    IF(
      AND(BEGINS(Product2.ProductCode , &apos;2-09&apos;),UnitPrice == 0 ), 
      &apos;3&apos;,
      IF (
        BEGINS(Product2.ProductCode , &apos;1-5&apos;), 
        &apos;2&apos;,
        IF (
          BEGINS(Product2.ProductCode , &apos;1&apos;), 
          &apos;1&apos;, 
          &apos;0&apos;
        )
      )
    )
  )
)</formula>
    <label>T&amp;C Code</label>
    <type>Text</type>
</CustomField>