force-app/main/default/objects/QuoteLineItem/fields/T_C_Dispenser_Agreement__c.field-meta.xml
<CustomField>
    <fullName>T_C_Dispenser_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product has the T&amp;C Dispenser Agreement Checked</inlineHelpText>
    <label>T&amp;C Dispenser Agreement</label>
    <type>Checkbox</type>
</CustomField>