force-app/main/default/objects/QuoteLineItem/fields/T_C_Equipment_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product has the T&amp;C Equipment Maintenance Checked</inlineHelpText>
    <label>T&amp;C Equipment Maintenance</label>
    <type>Checkbox</type>
</CustomField>