force-app/main/default/objects/QuoteLineItem/fields/T_C_Equipment_Rental_Washroom_Auto__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Rental_Washroom_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product has the T&amp;C Equipment Rental (Washroom Auto) Checked</inlineHelpText>
    <label>T&amp;C Equipment Rental (Washroom Auto)</label>
    <type>Checkbox</type>
</CustomField>