force-app/main/default/objects/QuoteLineItem/fields/T_C_Hygiene_Service_Continued__c.field-meta.xml
<CustomField>
    <fullName>T_C_Hygiene_Service_Continued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if product has the T&amp;C Hygiene Service Continued Checked, This is set to true by the Process Builder</description>
    <label>T&amp;C Hygiene Service Continued</label>
    <type>Checkbox</type>
</CustomField>