force-app/main/default/objects/QuoteLineItem/fields/T_C_Pest_Control_Service__c.field-meta.xml
<CustomField>
    <fullName>T_C_Pest_Control_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product has the T&amp;C Pest Control Service Checked</inlineHelpText>
    <label>T&amp;C Pest Control Service</label>
    <type>Checkbox</type>
</CustomField>