force-app/main/default/objects/QuoteLineItem/fields/T_C_Saniplus_Covid__c.field-meta.xml
<CustomField>
    <fullName>T_C_Saniplus_Covid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if product has the T&amp;C Pest Saniplus Covid Checked</inlineHelpText>
    <label>T&amp;C Saniplus Covid</label>
    <type>Checkbox</type>
</CustomField>