force-app/main/default/objects/QuoteLineItem/fields/Total_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Revenue__c</fullName>
    <formula>Total_Monthly_Revenue__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>