force-app/main/default/objects/QuoteLineItem/fields/Unit_Price_without_Install__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_without_Install__c</fullName>
    <description>This field will be used in the One time table in the Conga template. We only want the install price to show up in the installation table,</description>
    <formula>UnitPrice  -  Installation_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit price - install price</inlineHelpText>
    <label>Unit Price without Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>