force-app/main/default/objects/QuoteLineItem/validationRules/Do_not_allow_frequency_selection_for_BC.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_frequency_selection_for_BC</fullName>
    <active>false</active>
    <description>BC region sales will not choose 15/30/60 days product.</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Service_Frequency__c, &apos;Twice Monthly&apos;),
   ISPICKVAL(Service_Frequency__c, &apos;Monthly&apos;),
   ISPICKVAL(Service_Frequency__c, &apos;Bi-Monthly&apos;)
  ),
OR(UPPER(Quote.Opportunity.Account.ShippingState) = &apos;BC&apos;,
   UPPER(Quote.Opportunity.Account.ShippingState) = &apos;AB&apos;),
Line_of_Business__c=&apos;Hygiene&apos;
)</errorConditionFormula>
    <errorDisplayField>Service_Frequency__c</errorDisplayField>
    <errorMessage>The product frequency is not sold in this customer region (confirm with business)</errorMessage>
</ValidationRule>